LaTeX settup changes

--- a/.vim/vim/snippets/LaTeX/main.tex
+++ b/.vim/vim/snippets/LaTeX/main.tex
@@ -1,18 +1,16 @@
-\documentclass{report}
+%\documentclass[xcolor=x11names,table]{book}
+%\documentclass[xcolor=x11names,table]{article}
+\documentclass[xcolor=x11names,table]{report}
 
-\usepackage{myDefaultPackageSetup/debug}
-\usepackage{myDefaultPackageSetup/myDefaults}
-\usepackage{myDefaultPackageSetup/myTikz}
-\usepackage{myDefaultPackageSetup/CodeHighlighting}
+\usepackage{myDefaultPackageSetup/ArtRepBook/myDefaultsArtRepBook}
 
 \title{<++>}
 \author{Mike Mengjie Huang}
 
 \begin{document}
-% <++>
 \maketitle
 \tableofcontents
 
+% <++>
+
 \end{document}
-
-
