--- a/.vim/vim/snippets/LaTeX/myDefaultPackageSetup/Universal/CodeHighlighting.sty
+++ b/.vim/vim/snippets/LaTeX/myDefaultPackageSetup/Universal/CodeHighlighting.sty
@@ -1,6 +1,6 @@
 \ProvidesPackage{CodeHighlighting}
 
-\RequirePackage{xcolor}
+%\RequirePackage{xcolor}
 \RequirePackage{listings}
 
 % colors that are used
