--- a/.vim/vim/snippets/LaTeX/myDefaultPackageSetup/Universal/GeneralAdjustmentsInUniversal.sty
+++ b/.vim/vim/snippets/LaTeX/myDefaultPackageSetup/Universal/GeneralAdjustmentsInUniversal.sty
@@ -1,40 +1,58 @@
-\ProvidesPackage{myDefaults}
+\ProvidesPackage{GeneralAdjustmentsInUniversal}
+
+% Including things
 \RequirePackage{newclude}
-\RequirePackage[stable]{footmisc}% for footers to be able to be in the section heading
+
+% Different languages
+\RequirePackage[latin1,utf8]{inputenc}
 \RequirePackage[ngerman]{babel}
-\RequirePackage[utf8]{inputenc}
-\RequirePackage[margin=1.in]{geometry}
-\RequirePackage[table]{xcolor}
+\RequirePackage{verbatim}
+% !! If ENGLISH
+%\RequirePackage[english]{babel}
+
+% For footers to be able to be 
+% in the section heading
+\RequirePackage[stable]{footmisc}
+
+% Links
 \RequirePackage{hyperref}
-\RequirePackage{amssymb,amsmath,amsthm}
-\RequirePackage{scrextend}
-\RequirePackage{graphicx}
-\RequirePackage{enumitem}
-\RequirePackage{hyperref}
-\RequirePackage{array}
-\RequirePackage{listings}
-\RequirePackage{longtable}
-\RequirePackage{booktabs}
-\RequirePackage{multirow}
-\RequirePackage{tcolorbox}
+\RequirePackage{xurl} % URL over multiple lines
+
+% Math stuff!!
+\RequirePackage{amssymb}
+\RequirePackage{amsmath}
+\RequirePackage{amsthm}
 \RequirePackage{mathtools}
-\RequirePackage{esvect} % loads \vv (vector over multiple letters)
- 
-% to avoid spacing between the items of the itemize and enumerate environments
-\setitemize{topsep=0pt,parsep=3pt,partopsep=0pt,itemsep=3pt}
-\setenumerate{topsep=0pt,parsep=5pt,partopsep=0pt,itemsep=3pt}
+
+% for addmargin!!
+\RequirePackage{scrextend}
+
+% Pictures
+\RequirePackage{graphicx}
+\RequirePackage{caption}
+%\RequirePackage[font={<size>}]{caption}
+
+% layout stuff
+\RequirePackage{enumitem}
+\RequirePackage{array}
+\RequirePackage{tcolorbox}
+
+% For tables
+\RequirePackage{longtable}
+\RequirePackage{makecell}
+\RequirePackage{booktabs}
+
+\RequirePackage{multirow}
+\RequirePackage{multicol}
 
 % I don't want \tag to show parenthesis
 \newtagform{noparen}{}{}
 \usetagform{noparen}
 
-% the topsep is there to reverse the parsep-effect
-\newenvironment{itemizeIndent}
-{\begin{itemize}[topsep=-2pt]}
-{\end{itemize}}
-
+% Path for Pictures
 \graphicspath{{./image/}}
 
+% Configuring look of hyperlinks
 \hypersetup{
 	colorlinks=true,
 	linkcolor=blue,
@@ -42,16 +60,14 @@
 	urlcolor=cyan,
 }
 
-% colors
-\definecolor{blue-green}{rgb}{0.0, 0.87, 0.87}
-\definecolor{deepblue}{rgb}{0,0,0.5}
-\definecolor{red-brownish}{rgb}{0.6,0,0}
-\definecolor{deepgreen}{rgb}{0,0.5,0}
-\definecolor{turquoise}{rgb}{0,153,154}
-
-% for arrows
-\newcommand{\overarrow}[1]{$\overset{#1}{\rightarrow}${ }}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%            Arrows               %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newcommand{\arrow}{$\rightarrow${ }}
+\newcommand{\narrow}{\newline{}$\rightarrow${ }}
+
+% characters on top
+\newcommand{\overarrow}[1]{$\overset{#1}{\rightarrow}${ }}
 \newcommand{\arrowF}{\overarrow{F}} % follows
 \newcommand{\arrowD}{\overarrow{D}} % defined as
 \newcommand{\arrowB}{\overarrow{B}} % example
@@ -59,9 +75,17 @@
 \newcommand{\arrowsF}{\overarrow{sF}} % should Follow
 \newcommand{\arrowA}{$\overset{A}\leftrightarrow${ }}
 
+% characters on top and newline
+\newcommand{\noverarrow}[1]{\newline{}$\overset{#1}{\rightarrow}${ }}
+\newcommand{\narrowF}{\noverarrow{F}} % follows
+\newcommand{\narrowD}{\noverarrow{D}} % defined as
+\newcommand{\narrowB}{\noverarrow{B}} % example
+\newcommand{\narrowK}{\noverarrow{K}} % Comment
+\newcommand{\narrowsF}{\noverarrow{sF}} % should Follow
+\newcommand{\narrowA}{$\newline\overset{A}\leftrightarrow${ }}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Fonts
+%                Fonts            %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newcommand{\txtrm}[1]{\textrm{#1}}
 \newcommand{\txtsf}[1]{\textsf{#1}}
@@ -74,7 +98,7 @@
 \newcommand{\txtsc}[1]{\textsc{#1}}
 %\renewcommand{\emph}[1]{}
 
-% my own highlighting/emphasizing  fonts
+% my own highlighting/emphasizing fonts
 \newcommand{\txtemph}[1]{\txtbf{#1}}
 
 % table font
@@ -83,7 +107,7 @@
 \newcommand{\txtItem}[1]{\txtbf{#1}}% if there it an item and then a description of it (\item <something>: Description/Specification)
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Table
+%              Table              %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newcolumntype{\p}[1]{p{#1\textwidth}}
 \newcolumntype{\pc}[1]{>{\centering\arraybackslash}p{#1\textwidth}}
@@ -107,7 +131,7 @@
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Box around something
+%      Box around something       %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % Merkkasten
