--- a/.vim/vim/snippets/LaTeX/main.tex
+++ b/.vim/vim/snippets/LaTeX/main.tex
@@ -4,13 +4,13 @@
 
 \usepackage{myDefaultPackageSetup/ArtRepBook/myDefaultsArtRepBook}
 
-\title{<++>}
+\title{Mike}
 \author{Mike Mengjie Huang}
 
 \begin{document}
 \maketitle
 \tableofcontents
 
-% <++>
+My thing
 
 \end{document}
