--- a/.config/calcurse/todo
+++ b/.config/calcurse/todo
@@ -1,17 +1,18 @@
-[1]>fee63202ec441785c0e61010d07f0dfe63566bf7 Kleingewerbe gruenden
+[1]>1a375a453116537eda5e5649ba197768bbc0599c Python noch besser kennenlernen (git course)
+[1]>f729788525993306a5cad0eff8bb3491c13a447b Unternehmensanalyse
+[1]>3743c998903b9ae201a8b11a1440d0dac31228e9 Unternehmenskennzahlen fertig aufschreiben
 [3]>cd663114260646f4a41d4d68de83000dbb6184f5 Python Vortraege
-[4]>00944765a0fe157c7f1bebec0dfc2abd5fae11f1 Anmeldung in TU Berlin
-[5] Calcurse - Wenn keine Prioritaet dann soll es nicht in der Mail erwaehnt werden
-[5]>3dca7ad9d9ea2ff7c5bb0ba0e49cb77154123707 Python noch besser kennenlernen (git course)
+[6]>fee63202ec441785c0e61010d07f0dfe63566bf7 Kleingewerbe gruenden
 [7] To Dos von Discord hier rein uebertragen
 [8]>0c3530c386cb1c14c811aad60cdac6581410bb73 Kaufe das Geschenk von Mohamed bzw. Frage ihn
 [8]>19e5e384ce4dbf8765c3b1e14fb38182693cd812 Networks angucken
-[9]>b3ef32a7b0680081b32bbf5a42baf7bb01a68524 Ergaenzen von Downloads
+[9]>9ce06f76cbb9e256764630d5d2c0798f7b8bb1b2 Ergaenzen von Downloads
 [0] Game Theory Buch lesen
 [0] Gitconfig aus Repository entfernen
 [0]>01170624c4478656c5f97087c3cbd9c34e26780d Google tabs
 [0]>4a32e98fac05c04ad61c34f4f008ac89f42e4f5b Review The Four agreements along with notes
 [0]>75d3a55be1eaca819c9e4d38ff077f193ba05871 Setting up i3 for multiple monitors
+[0]>90dd06bfba9fdbce420eab8ec2a80151f5747904 Tikz
 [0]>73aa4f25727b6376b8cf665343e8cd59abf5d2b7 To Read
-[0]>cb60859bb4b0a33f8718c07ef0fb5ef44b354c7e To Watch and Watching
-[0]>acb84d3a3218845c7b411915965013edca17e6e4 Webdevelopment
+[0]>eaea08b53c05625af3a1018c5f1758d12f7b0083 To Watch and Watching
+[0]>cdc3997383df0ee09c404b1c3065573ab34800e9 Webdevelopment
