changes to settings.

--- a/.vim/vim/snippets/LaTeX/bmain.tex
+++ b/.vim/vim/snippets/LaTeX/bmain.tex
@@ -3,6 +3,14 @@
 \usepackage{myDefaultPackageSetup/Beamer/myDefaultsBeamer}
 \include{myDefaultPackageSetup/Beamer/myTheme1}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%       Show notes on pympress      %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%\usepackage{pgfpages}
+%\setbeamertemplate{note page}[plain]
+%\setbeameroption{show notes on second screen=right}
+%%\setbeameroption{show only notes}
+
 \title[<++>]
 {<++>}
 \author{Mike Mengjie Huang}
