--- a/.config/calcurse/todo
+++ b/.config/calcurse/todo
@@ -1,18 +1,19 @@
-[1]>1a375a453116537eda5e5649ba197768bbc0599c Python noch besser kennenlernen (git course)
-[1]>f729788525993306a5cad0eff8bb3491c13a447b Unternehmensanalyse
-[1]>3743c998903b9ae201a8b11a1440d0dac31228e9 Unternehmenskennzahlen fertig aufschreiben
-[3]>976c8e9bad28fbd2bacfef6957b07f87746e7ca5 Python Vortraege
-[6]>fee63202ec441785c0e61010d07f0dfe63566bf7 Kleingewerbe gruenden
+[1]>ba46843b736670bf1ac85a91852bfaf938972af3 Python Vortraege
+[2]>f729788525993306a5cad0eff8bb3491c13a447b Unternehmensanalyse
+[3]>4707af095a2461619c7bda1d71dcc0cd2df0e645 Kleingewerbe gruenden
 [7] To Dos von Discord hier rein uebertragen
-[8]>0c3530c386cb1c14c811aad60cdac6581410bb73 Kaufe das Geschenk von Mohamed bzw. Frage ihn
 [8]>19e5e384ce4dbf8765c3b1e14fb38182693cd812 Networks angucken
-[9]>9ce06f76cbb9e256764630d5d2c0798f7b8bb1b2 Ergaenzen von Downloads
+[8]>1a375a453116537eda5e5649ba197768bbc0599c Python noch besser kennenlernen (git course)
+[9]>e3c21113e49f9dd1d86f08c7ab22b1d20b9cbc84 Checking Speed Reading progress
+[9]>7b9c2343dc0c3c0eda4c14580e35e052d236d104 Ergaenzen von Downloads
+[0] Clean Code re-read und in Anki uebertragen
 [0] Game Theory Buch lesen
 [0] Gitconfig aus Repository entfernen
 [0]>01170624c4478656c5f97087c3cbd9c34e26780d Google tabs
-[0]>4a32e98fac05c04ad61c34f4f008ac89f42e4f5b Review The Four agreements along with notes
-[0]>75d3a55be1eaca819c9e4d38ff077f193ba05871 Setting up i3 for multiple monitors
+[0]>035b22e80fcbebe6528b23f9308d8dc3e7229a25 Music zu downloaden
+[0]>fcc003509386f00203553d86e37bbcea8db79715 Node-Red Project
 [0]>90dd06bfba9fdbce420eab8ec2a80151f5747904 Tikz
 [0]>73aa4f25727b6376b8cf665343e8cd59abf5d2b7 To Read
-[0]>eaea08b53c05625af3a1018c5f1758d12f7b0083 To Watch and Watching
+[0]>a947df4014fa154bd16bdf6de8f419c802d22f4f To Watch and Watching
+[0]>31b13f7e0dfb3f2d47a306d4f2fd01a1607db7a6 USB Sttick fuer Dokumentations
 [0]>cdc3997383df0ee09c404b1c3065573ab34800e9 Webdevelopment
