--- a/.vim/vim/snippets/LaTeX/myDefaultPackageSetup/Universal/myDefaultsUniversal.sty
+++ b/.vim/vim/snippets/LaTeX/myDefaultPackageSetup/Universal/myDefaultsUniversal.sty
@@ -6,4 +6,5 @@
 \usepackage{myDefaultPackageSetup/Universal/myTikz}
 \usepackage{myDefaultPackageSetup/Universal/CodeHighlighting}
 \usepackage{myDefaultPackageSetup/Universal/myTikzUmlPackage}
+\usepackage{myDefaultPackageSetup/Universal/myTikzStylesAndAuxCommands}
 \usepackage{myDefaultPackageSetup/Universal/debug}
