--- a/.vim/vim/snippets/LaTeX/myDefaultPackageSetup/Beamer/myDefaultsBeamer.sty
+++ b/.vim/vim/snippets/LaTeX/myDefaultPackageSetup/Beamer/myDefaultsBeamer.sty
@@ -3,3 +3,6 @@
 \RequirePackage{myDefaultPackageSetup/Universal/myDefaultsUniversal}
 \RequirePackage{geometry}
 
+\RequirePackage{ragged2e}
+\RequirePackage{etoolbox}
+\apptocmd{\frame}{}{\justifying}{} % Allow optional arguments after frame.
