New System change

--- a/.vim/vim/snippets/LaTeX/myDefaultPackageSetup/Universal/GeneralAdjustmentsInUniversal.sty
+++ b/.vim/vim/snippets/LaTeX/myDefaultPackageSetup/Universal/GeneralAdjustmentsInUniversal.sty
@@ -23,6 +23,7 @@
 \RequirePackage{amsmath}
 \RequirePackage{amsthm}
 \RequirePackage{mathtools}
+\RequirePackage{IEEEtrantools}
 
 % for addmargin!!
 \RequirePackage{scrextend}
