--- a/.vim/vim/snippets/LaTeX/myDefaultPackageSetup/Universal/GeneralAdjustmentsInUniversal.sty
+++ b/.vim/vim/snippets/LaTeX/myDefaultPackageSetup/Universal/GeneralAdjustmentsInUniversal.sty
@@ -46,6 +46,9 @@
 \RequirePackage{multirow}
 \RequirePackage{multicol}
 
+% For extra symbols
+\usepackage{pifont}
+
 % I don't want \tag to show parenthesis
 \newtagform{noparen}{}{}
 \usetagform{noparen}
@@ -143,3 +146,15 @@
 \newenvironment{memoryBoxTitle}[1]
 {\begin{center}\begin{tcolorbox}[width=0.7\textwidth,title=#1]}
 {\end{tcolorbox}\end{center}}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%             To-Do List          %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\newlist{todolist}{itemize}{2}
+\setlist[todolist]{label=$\square$}
+\newcommand{\cmark}{\ding{51}}%
+\newcommand{\xmark}{\ding{55}}%
+\newcommand{\done}{\rlap{$\square$}{\raisebox{2pt}{\large\hspace{1pt}\cmark}}%
+\hspace{-2.5pt}}
+\newcommand{\wontfix}{\rlap{$\square$}{\large\hspace{1pt}\xmark}}
