--- a/.vim/vim/snippets/LaTeX/myDefaultPackageSetup/Universal/GeneralAdjustmentsInUniversal.sty
+++ b/.vim/vim/snippets/LaTeX/myDefaultPackageSetup/Universal/GeneralAdjustmentsInUniversal.sty
@@ -140,11 +140,11 @@
 
 % Merkkasten
 \newenvironment{memoryBox}
-{\begin{center}\begin{tcolorbox}[width=0.7\textwidth]}
+{\begin{center}\begin{tcolorbox}[width=1\textwidth]}
 {\end{tcolorbox}\end{center}}
 
 \newenvironment{memoryBoxTitle}[1]
-{\begin{center}\begin{tcolorbox}[width=0.7\textwidth,title=#1]}
+{\begin{center}\begin{tcolorbox}[colback=blue!5!white, colframe=blue!75!black, width=1\textwidth,title=\textbf{#1}]}
 {\end{tcolorbox}\end{center}}
 
 
