--- a/.vim/vim/snippets/LaTeX/myDefaultPackageSetup/Universal/CodeHighlighting.sty
+++ b/.vim/vim/snippets/LaTeX/myDefaultPackageSetup/Universal/CodeHighlighting.sty
@@ -137,11 +137,10 @@
 % Define the code emph rules
 \newcommand\dartstyle{%
 \defaultstyle\lstset{%
-	language=dart,%
 	frame=single,%
 	stringstyle=\color{deepgreen},%
-	otherkeywords={%
-  % Types
+	emph={%
+  %Types
   final,const,int,List,var,String,%
   %Functions
   },
